# Controller

C_Controller/: CMakeLists.txt  Makefile  README.md  TaskSensing.c  compile_flags.txt  controller.c  controller.h  hardware.h  ihm_communication.c  ihm_communication.h  main.c  sensing.c  tasks_recovid.c
C_Controller/lowlevel/include/: hardware_real.h  i2c.h
C_Controller/lowlevel/native/: hardware_simulation.c  i2c.c  native.cmake
C_Controller/lowlevel/stm32f303/: CMakeLists.txt  hardware_real.c  hardware_serial.c  hardware_simulation.c  i2c.c  main.h  motor.c  motor_pep.c  recovid_revB.c  sensors.c  simple_indicators.c  stm32f303.mk  stm32f3xx_hal_msp.c
Controller-V2-F303/: Makefile
LSL-results/: README-LSL.md
